# miracle

./: .clang-tidy  CMakeLists.txt
.github/workflows/: ci.yml
ext/: CMakeLists.txt
scripts/: format_code.sh
src/: EnemyColliderInfo.hpp  app.cpp  app.hpp  enemy.cpp  enemy.hpp  enemy_params.hpp  game.cpp  game.hpp  lighhouse.hpp  light.cpp  light.hpp  lighthouse.cpp  lighthouse.hpp  log.hpp  main.cpp  resources.cpp  resources.hpp
src/util/: random.hpp
